feat(frontend): add BackButton component and update Auth validation page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,6 +22,7 @@
     --card: #e4e4e4;
     --primary: #763c28;
     --background: #f5f5f5;
+    --foreground: #1b1c1c;
     --color-border: #575757;
     --color-border-contrast: #e4e4e4;
     --floating-button-background: #c6a484;
@@ -37,6 +38,7 @@
         --card: #343434;
         --primary: #eaa134;
         --background: #1b1c1c;
+        --foreground: #f5f5f5;
         --color-border: #cecece;
         --color-border-contrast: #343434;
         --floating-button-background: #674628;
